Atualização com o schema.sql e novas informações

--- a/Ada_app/appsettings.json
+++ b/Ada_app/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres_ada;Port=5432;Database=Nome_DB;UserName=postgres;Password=postgres"
+    "DefaultConnection": "Host=postgres_ada;Port=5432;Database=DB_ADA;UserName=postgres;Password=postgres"
   },
   "Logging": {
     "LogLevel": {
